<resources>
    <string name="app_name">Михаил Копьев</string>

    <!--List Strings -->
    <string name="mobile">Мобильный</string>

    <string name="email">E-mail</string>
    <string name="profile_vk">Профиль в VK</string>
    <string name="repository">Репозиторий</string>
    <string name="about">О себе</string>
    <string name="phone_number">+7 (915) 995-**</string>
    <string name="email_value">**@gmail.com</string>
    <string name="edit_profile_vk">vk.com/</string>
    <string name="edit_repository">github.com/</string>
    <string name="edit_about">хочу стать Android разработчиком</string>

    <!--User Bar Strings -->
    <string name="rating">Рейтинг</string>
    <string name="write_string_code">Написано строк кода</string>
    <string name="projects">Проектов</string>
    <string name="count_rating">5</string>
    <string name="count_string_code">5</string>
    <string name="count_projects">5</string>

    <!--Drawer Strings-->
    <string name="my_profile">Мой Профиль</string>
    <string name="team">Команда</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.gallery">Загрузить из галлереи</string>
    <string name="user_profile.dialog.camera">Сделать снимок</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile_choose_message">Выберите фото</string>
    <string name="make_shoot">Сделать снимок</string>
    <string name="cancel">Отмена</string>

    <!--Error Strings-->
    <string name="err_msg_phone">Enter valid phone number: +x xxx xxx-xx-xx</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_url">Enter valid url address</string>

    <!--Login Strings-->
    <string name="enter">ВОЙТИ</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="email_login_et">Email</string>
    <string name="password_login_et">Password</string>
    <string name="err_password">Введите пароль</string>
    <string name="hint_search">Поиск</string>
    <string name="my_profile_txt">Мой профиль</string>
    <string name="users_txt">Пользователи</string>
    <string name="team_txt">Команда</string>


    <string name="email_hint">E-mail</string>
    <string name="mobile_hint">Мобильный</string>
    <string name="vk_hint">Профиль в VK</string>
    <string name="repository_hint">Репозиторий</string>
    <string name="about_hint">О себе</string>
    <string name="about_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="repository_text">github.com/vertazoom/DevIntensive</string>
    <string name="vk_text">vk.com/id1</string>
    <string name="email_text">admin@example.com</string>
    <string name="mobile_text">+7(988)888–88-88</string>
    <string name="stats_value">5</string>
    <string name="stats_rating_text">Рейтинг</string>
    <string name="stats_code_count_text">Написано строк кода</string>
    <string name="stats_project_text">Проектов</string>

    <!--Menu-->

    <string name="user_profile.phone.error_message">Неверный формат номера</string>
    <string name="user_profile.mail.error_message">Неверный формат E-mail адреса</string>
    <string name="user_profile.vk.error_message">Адрес должен быть вида: vk.com/xxx</string>
    <string name="user_profile.github.error_message">Адрес должен быть вида: github.com/xxx</string>
    <string name="authorization.header">ВОЙТИ</string>
    <string name="authorization.mail_hint">E-mail</string>
    <string name="authorization.mail_text">a@example.com</string>
    <string name="authorization.password_hint">Пароль</string>
    <string name="authorization.button_text">Войти</string>
    <string name="authorization.forgot_password_text">Забыли пароль?</string>

</resources>

