<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--user Bar -->
        <LinearLayout
            style="@style/userBar">

            <LinearLayout
                style="@style/userBarElement.Side">

                <TextView
                    style="@style/userBarText.Value"
                    android:text="@string/count_rating"/>

                <TextView
                    style="@style/userBarText.Description"
                    android:text="@string/rating"/>
            </LinearLayout>

            <LinearLayout
                style="@style/userBarSeparator">
            </LinearLayout>

            <LinearLayout
                style="@style/userBarElement.Central">

                <TextView
                    style="@style/userBarText.Value"
                    android:text="@string/count_string_code"/>

                <TextView
                    style="@style/userBarText.Description"
                    android:text="@string/write_string_code"/>
            </LinearLayout>

            <LinearLayout
                style="@style/userBarSeparator">
            </LinearLayout>

            <LinearLayout
                style="@style/userBarElement.Side">

                <TextView
                    style="@style/userBarText.Value"
                    android:text="@string/count_projects"/>

                <TextView
                    style="@style/userBarText.Description"
                    android:text="@string/projects"/>
            </LinearLayout>
        </LinearLayout>

        <!--user List Information Elements-->
        <!--phone -->
        <LinearLayout
            style="@style/listElements">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp"/>

            <LinearLayout
                style="@style/listContent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/listEditText"
                        android:hint="@string/mobile"
                        android:inputType="phone"
                        android:text="@string/phone_number"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <LinearLayout
            style="@style/ListSeparator">
        </LinearLayout>

        <!--Email -->
        <LinearLayout
            style="@style/listElements">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout
                style="@style/listContent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/listEditText"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:text="@string/email_value"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <LinearLayout
            style="@style/ListSeparator">
        </LinearLayout>

        <!--Social web -->
        <LinearLayout
            style="@style/listElements">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/vk_circle"/>

            <LinearLayout
                style="@style/listContent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/listEditText"
                        android:hint="@string/profile_vk"
                        android:inputType="textAutoCorrect"
                        android:text="@string/edit_profil_vk"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <LinearLayout
            style="@style/ListSeparator">
        </LinearLayout>

        <!--Github-->
        <LinearLayout
            style="@style/listElements">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/github_circle"/>

            <LinearLayout
                style="@style/listContent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/listEditText"
                        android:hint="@string/repository"
                        android:inputType="textUri"
                        android:text="@string/edit_repository"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <LinearLayout
            style="@style/ListSeparator">
        </LinearLayout>

        <!--About -->
        <LinearLayout
            style="@style/listElements">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <LinearLayout
                style="@style/listContent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/listEditText"
                        android:hint="@string/about"
                        android:inputType="phone"
                        android:text="@string/edit_about"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/ListSeparator">
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
